Overlay header title not showing -- fixes #889

--- a/overlay-child.css
+++ b/overlay-child.css
@@ -116,9 +116,7 @@ html.js body {
   line-height: 30px;
   font-size: inherit;
   letter-spacing: normal;
-  padding: 0;
-  text-transform: uppercase;
-  display:none;
+  font-weight:bold;
 }
 
 /**
